--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,3 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -20,8 +19,24 @@
     "useDefineForClassFields": false,
     "lib": [
       "ES2022",
-      "dom"
-    ]
+      "dom",
+      "esnext.asynciterable"
+    ],
+    "paths": {
+      "@pages/*": [
+        "./src/app/pages/*"
+      ],
+      "@core/*": [
+        "./src/app/core/*"
+      ],
+      "@graphql/*": [
+        "./src/app/graphql/*"
+      ],
+      "@environments/*": [
+        "./src/environments/*"
+      ]
+    },
+    "allowSyntheticDefaultImports": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
